--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "atob": "^2.1.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "connect-mongo": "^4.6.0",
+    "connect-mongodb-session": "^3.1.1",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -30,13 +32,16 @@
     "mongoose": "^6.4.6",
     "mongoose-encryption": "^2.1.2",
     "mongoose-findorcreate": "^3.0.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
+    "require": "^2.4.20",
     "router": "^1.3.7",
+    "session": "^0.1.0",
     "validator": "^13.7.0"
   }
 }
