--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/PARKHI277/E-HUB-Backend#readme",
   "dependencies": {
+    "@gonetone/get-youtube-id-by-url": "^1.0.0",
     "atob": "^2.1.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -29,6 +30,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "googleapis": "^107.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.6",
