--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "googleapis": "^107.0.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.6",
     "mongoose-encryption": "^2.1.2",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
