--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.17.3",
     "googleapis": "^107.0.0",
     "gridfs-stream": "^1.1.1",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.6",
